# mapreduce-framework

./: .gitignore  CMakeLists.txt  README.md
examples/: word_count_demo.cpp
include/: Barrier.h  MapReduceClient.h  MapReduceFramework.h
src/: Barrier.cpp  MapReduceFramework.cpp
tests/: test_barrier.cpp  test_job_state.cpp  test_word_count.cpp
